# lidar_scan_filters

./: Brain Corp Coding Challenge.ipynb  CMakeLists.txt  README.md
CPP/: CMakeLists.txt  lidar_scan_filters.cpp  lidar_scan_filters.h  test_lidar_scan_filters.cpp
Python2.7/: lidar_scan_filters.py  test_lidar_scan_filters.py
